<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sign_in_bg_color"
    tools:context=".views.activity.both.SignInActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/man"
        android:layout_marginTop="@dimen/_50sdp"
        />

    <smile.khaled.mohamed.rehab.utils.CustomButton
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@drawable/signin_border_btn"
        android:text="@string/patient"
        android:id="@+id/sign_in_as_patient"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:onClick="signInPatientAccount"
        />

    <smile.khaled.mohamed.rehab.utils.CustomButton
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@drawable/signin_border_btn"
        android:text="@string/doctor"
        android:id="@+id/sign_in_as_doctor"
        android:textColor="@color/text_color_white"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:onClick="signInDoctorAccount"
        />

    <smile.khaled.mohamed.rehab.utils.CustomEditText
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/sign_in_username"
        android:inputType="text"
        style="@style/EditText1Style"
        android:textAlignment="center"
        android:textColor="@color/text_color_white"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColorHint="@color/text_color_white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/line_bg_color"/>

    <smile.khaled.mohamed.rehab.utils.CustomEditText
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/sign_in_password"
        style="@style/EditText1Style"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:textAlignment="center"
        android:textColor="@color/text_color_white"
        android:textColorHint="@color/text_color_white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/line_bg_color"/>

    <smile.khaled.mohamed.rehab.utils.CustomButton
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@drawable/signin_bg_btn"
        android:text="@string/login"
        android:textColor="@color/text_color_white"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"
        android:layout_margin="@dimen/_20sdp"
        android:onClick="signIn"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        >

        <smile.khaled.mohamed.rehab.utils.CustomTextView
            foo:customFont="fonts/Cairo-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/_12ssp"
            />

        <smile.khaled.mohamed.rehab.utils.CustomTextView
            foo:customFont="fonts/Cairo-Regular.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/text_color_white"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_4sdp"
            android:textSize="@dimen/_12ssp"
            android:onClick="createNewAccount"
            android:id="@+id/create_new_account"
            />
    </LinearLayout>


</LinearLayout>
</ScrollView>
</layout>