<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <ScrollView
        xmlns:foo="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2B445E"
        tools:context=".views.activity.SignUpActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B445E"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/man"
        android:layout_marginTop="@dimen/_50sdp"
        />

    <smile.khaled.mohamed.rehab.utils.CustomTextView
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textSize="@dimen/_18ssp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        />


    <smile.khaled.mohamed.rehab.utils.CustomEditText
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#fff"
        android:background="@null"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColorHint="#fff"
        android:id="@+id/sign_up_username"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#d7d7d7"/>


    <smile.khaled.mohamed.rehab.utils.CustomEditText
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textAlignment="center"
        android:textColor="#fff"
        android:inputType="phone"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@null"
        android:textColorHint="#fff"
        android:id="@+id/sign_up_phone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#d7d7d7"/>


    <smile.khaled.mohamed.rehab.utils.CustomEditText
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@null"
        android:textColor="#fff"
        android:inputType="textEmailAddress"
        android:textColorHint="#fff"
        android:id="@+id/sign_up_email"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#d7d7d7"/>


    <smile.khaled.mohamed.rehab.utils.CustomEditText
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColor="#fff"
        android:background="@null"
        android:layout_marginTop="@dimen/_15sdp"
        android:inputType="textPassword"
        android:textColorHint="#fff"
        android:id="@+id/sign_up_password"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#d7d7d7"/>



    <smile.khaled.mohamed.rehab.utils.CustomButton
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@drawable/signin_bg_btn"
        android:text="@string/next"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="@dimen/_20sdp"
        android:onClick="next"
        />
</LinearLayout>
    </ScrollView>
</layout>