<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
        xmlns:foo="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2B445E"
        tools:context=".views.activity.AccountTypeActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
  >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/man"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        />

    <smile.khaled.mohamed.rehab.utils.CustomTextView
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_account_type"
        android:layout_margin="@dimen/_20sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_15ssp"
        android:textColor="#fff"
        />
    <smile.khaled.mohamed.rehab.utils.CustomButton
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@drawable/signin_bg_btn"
        android:text="@string/patient"
        android:textColor="#fff"
        android:id="@+id/sign_up_as_patient"
        android:textSize="@dimen/_15ssp"
        android:layout_margin="@dimen/_20sdp"
        android:onClick="createPatientAccount"
        />

    <smile.khaled.mohamed.rehab.utils.CustomButton
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@drawable/signin_border_btn"
        android:text="@string/doctor"
        android:id="@+id/sign_up_as_doctor"
        android:textColor="#fff"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:onClick="createDoctorAccount"
        />


    <smile.khaled.mohamed.rehab.utils.CustomButton
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@drawable/signin_bg_btn"
        android:text="@string/next"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"
        android:layout_margin="@dimen/_20sdp"
        android:onClick="next"
        />

</LinearLayout>
    </ScrollView>
</layout>