<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>
    <ScrollView
        xmlns:foo="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2B445E"
        tools:context=".views.activity.ActivateAccountActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/man"
        android:layout_marginTop="@dimen/_60sdp"
        />




    <smile.khaled.mohamed.rehab.utils.CustomEditText
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_code"
        android:textAlignment="center"
        android:textColor="#fff"
        android:layout_marginTop="@dimen/_80sdp"
        android:background="@null"
        android:id="@+id/code"
        android:inputType="text"
        android:textColorHint="#fff"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#d7d7d7"/>

    <smile.khaled.mohamed.rehab.utils.CustomTextView
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="لقد قمنا بارسال رمز التاكيد على رقم جوالك قم بالتحقق منه"
        android:layout_margin="@dimen/_20sdp"
        android:textSize="@dimen/_15ssp"
        android:textAlignment="center"
        android:textColor="#fff"
        />

    <smile.khaled.mohamed.rehab.utils.CustomTextView
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_send"
        android:layout_margin="@dimen/_20sdp"
        android:textSize="@dimen/_15ssp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:id="@+id/activate_code"
        android:layout_marginTop="@dimen/_20sdp"
        />

    <smile.khaled.mohamed.rehab.utils.CustomButton
        foo:customFont="fonts/Cairo-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:background="@drawable/signin_bg_btn"
        android:text="@string/next"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp"
        android:layout_margin="20dp"
        android:onClick="openHome"
        />

</LinearLayout>
    </ScrollView>
</layout>